--- a/portifolio/package.json
+++ b/portifolio/package.json
@@ -9,18 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "15.0.3",
-    "node": "^22.11.0",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
-    "serve": "^14.2.4"
+    "next": "15.0.3"
   },
   "devDependencies": {
+    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "tailwindcss": "^3.4.1"
   }
 }
